--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#Typescript
+*.js
+*.js.map
+
 # Logs
 logs
 *.log
@@ -9,6 +13,9 @@ lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+#Config File
+config.json
 
 # Runtime data
 pids
