--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "LemMem",
   "license": "MIT",
   "dependencies": {
+    "@types/mongodb": "^3.6.17",
     "@types/node": "^15.12.0",
     "discord.js": "^12.5.3",
+    "mongodb": "^3.6.9",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
+    "twitch": "^4.5.5",
     "typescript": "^4.3.2"
   }
 }
