--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A bot that sends messages when a tf2 comp stream happens",
   "main": "index.js",
+  "repository": "https://github.com/LemMem/TF2NotifyBot.git",
   "scripts": {
     "test": "nodemon ./index.ts"
   },
@@ -11,11 +12,13 @@
   "dependencies": {
     "@types/mongodb": "^3.6.17",
     "@types/node": "^15.12.0",
+    "@types/node-fetch": "^2.5.10",
+    "axios": "^0.21.1",
     "discord.js": "^12.5.3",
+    "htmlparser2": "^6.1.0",
     "mongodb": "^3.6.9",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
-    "twitch": "^4.5.5",
     "typescript": "^4.3.2"
   }
 }
