Updated Action to copy config file

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -30,6 +30,13 @@ jobs:
         with:
           node-version: '14'
       
+      # Copy Config
+      - name: Configure
+        uses: canastro/copy-file-action@master
+        with: 
+          source: "config-template.json"
+          target: "config.json"
+      
       # Install Dependancies
       - name: Install
         run: npm i
