--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "main": "index.js",
   "repository": "https://github.com/LemMem/TF2NotifyBot.git",
   "scripts": {
-    "test": "nodemon ./index.ts"
+    "test": "nodemon ./index.ts",
+    "build": "tsc --project tsconfig.json",
+    "run": "node ./index.js"
   },
   "author": "LemMem",
   "license": "MIT",
   "dependencies": {
-    "@types/mongodb": "^3.6.17",
-    "@types/node": "^15.12.0",
-    "@types/node-fetch": "^2.5.10",
     "axios": "^0.21.1",
     "discord.js": "^12.5.3",
     "htmlparser2": "^6.1.0",
-    "mongodb": "^3.6.9",
+    "mongodb": "^3.6.9"
+  },
+  "devDependencies": {
+    "@types/mongodb": "^3.6.17",
+    "@types/node": "^15.12.2",
+    "@types/ws": "^7.4.4",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
